# dollshare

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yml
scripts/: dollhouse-share-flameshot.sh  dollhouse-share.sh  dollshare-upload-flameshot.sh  dollshare-upload.sh
src/: authentication.rs  cryptography.rs  elapsed.rs  main.rs  mime.rs  storage.rs
src/middleware/: headers.rs
src/providers/: auth.rs  storage.rs
src/routes/: index.rs  mod.rs  statistics.rs
src/routes/uploads/: delete.rs  get.rs  mod.rs  post.rs  upload.rs
src/static/: index.css  index.html  index.js
src/storage/: app_storage.rs  mod.rs
src/storage/backends/: filesystem.rs  memory.rs  mod.rs  s3.rs
