[package]
name = "dollhouse"
description = "Create file share links and embed media on websites."
repository = "https://github.com/Blooym/dollhouse"
authors = ["Blooym"]
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
blake3 = { version = "1.8.2", features = ["zeroize", "rayon"] }
bytesize = "2.0.1"
clap = { version = "4.5.37", features = ["derive", "env", "string"] }
chacha20poly1305 = "0.10.1"
clap-duration = "0.1.11"
dirs = "6.0.0"
dotenvy = "0.15.7"
duration-human = "0.1.10"
infer = "0.19.0"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "normalize-path",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
rand = "0.9.1"
base64ct = { version = "1.7.3", features = ["alloc"] }
