[package]
name = "dollhouse"
description = "Create file share links and embed media on websites."
repository = "https://github.com/Blooym/dollhouse"
authors = ["Blooym"]
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["storage-filesystem", "storage-memory", "storage-s3"]
storage-memory = ["dep:dashmap"]
storage-filesystem = ["dep:faccess"]
storage-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
blake3 = { version = "1.8.2", features = ["zeroize", "rayon"] }
bytesize = "2.0.1"
clap = { version = "4.5.42", features = ["derive", "env", "string"] }
chacha20poly1305 = "0.10.1"
clap-duration = "0.1.11"
dotenvy = "0.15.7"
duration-human = "0.1.10"
infer = "0.19.0"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "normalize-path",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
base64ct = { version = "1.8.0", features = ["alloc"] }
rand = "0.9.2"
image = "0.25.6"

# Filesystem Storage
faccess = { version = "0.2.4", optional = true }
# Memory Storage
dashmap = { version = "6.1.0", optional = true }
# S3 Storage
aws-sdk-s3 = { version = "1.101.0", optional = true, features = [
    "behavior-version-latest",
] }
aws-config = { version = "1.8.4", optional = true, features = [
    "behavior-version-latest",
] }
