[package]
name = "dollshare"
description = "Create file share links and embed media on websites."
repository = "https://codeberg.org/Blooym/dollshare"
authors = ["Blooym"]
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["storage-filesystem", "storage-memory", "storage-s3"]
storage-memory = ["dep:dashmap"]
storage-filesystem = ["dep:faccess"]
storage-s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2", "multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
blake3 = { version = "1.8.2", features = ["zeroize", "rayon"] }
bytesize = "2.1.0"
clap = { version = "4.5.48", features = ["derive", "env", "string"] }
chacha20poly1305 = "0.10.1"
clap-duration = "0.1.11"
dotenvy = "0.15.7"
duration-human = "0.1.10"
infer = "0.19.0"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "normalize-path",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
base64ct = { version = "1.8.0", features = ["alloc"] }
image = "0.25.8"

# Filesystem Storage
faccess = { version = "0.2.4", optional = true }
# Memory Storage
dashmap = { version = "6.1.0", optional = true }
# S3 Storage
aws-sdk-s3 = { version = "1.107.0", optional = true, features = [
    "behavior-version-latest",
] }
aws-config = { version = "1.8.7", optional = true, features = [
    "behavior-version-latest",
] }
